edition = "2023";  // successor to proto2 and proto3

package storage;
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message NodeComponent {
  string id = 1; // This field is composite id over name, version, and operating system. // @gotags: search:"Component ID,store,hidden" sql:"pk,id"
  string name = 2; // @gotags: search:"Component,store"
  string version = 3; // @gotags: search:"Component Version,store"
  int64 priority = 5; // @gotags: search:"Component Risk Priority,hidden"
  float risk_score = 7; // @gotags: search:"Component Risk Score,hidden"
  oneof set_top_cvss {
    float top_cvss = 8; // @gotags: search:"Component Top CVSS,store"
  }
  string operating_system = 9; // @gotags: search:"Operating System"
}
